dist_data_DATA = \
discrete_square.pat          gausscorr_uniform_2d_train.pat \
gauss2_uniform_2d_train.pat  trainRoot.pat \
gauss2_uniform_2d_valid.pat  triangle_square_00_train.pat \
gauss4_uniform_2d_train.pat  triangle_square_RBF_trained.net \
gauss4_uniform_2d_valid.pat  uniform_on_uniform_2d.pat \
gauss_uniform_2d_train.pat   booster.config \
indicator.config             lambda-train.pat \
lambda-test.pat              cmc.data \
gauss2_uniform_2d_train_root.pat  mlp_root.pat \
tmva_root.pat                cleveland.data \
samplematrixindicator.cfg