pkginclude_HEADERS = \
  StatPatternRecognition/SprFomCalculator.hh                StatPatternRecognition/SprIntegerBootstrap.hh \
  StatPatternRecognition/SprAbsClassifier.hh                StatPatternRecognition/SprIntegerPermutator.hh \
  StatPatternRecognition/SprCombiner.hh                     StatPatternRecognition/SprLoss.hh \
  StatPatternRecognition/SprAbsFilter.hh                    StatPatternRecognition/SprMultiClassReader.hh \
  StatPatternRecognition/SprAbsMultiClassLearner.hh         StatPatternRecognition/SprMultiClassLearner.hh \
  StatPatternRecognition/SprAbsReader.hh                    StatPatternRecognition/SprPoint.hh \
  StatPatternRecognition/SprNNDefs.hh                       StatPatternRecognition/SprRandomNumber.hh \
  StatPatternRecognition/SprAbsTrainedClassifier.hh         StatPatternRecognition/SprRootReader.hh \
  StatPatternRecognition/SprTrainedCombiner.hh              StatPatternRecognition/SprRootWriter.hh \
  StatPatternRecognition/SprAbsTrainedMultiClassLearner.hh  StatPatternRecognition/SprSimpleReader.hh \
  StatPatternRecognition/SprAbsTwoClassCriterion.hh         StatPatternRecognition/SprStringParser.hh \
  StatPatternRecognition/SprAbsWriter.hh                    StatPatternRecognition/SprTopdownTree.hh \
  StatPatternRecognition/SprTrainedAdaBoost.hh              StatPatternRecognition/SprTrainedBagger.hh \
  StatPatternRecognition/SprAdaBoost.hh                     StatPatternRecognition/SprTrainedBinarySplit.hh \
  StatPatternRecognition/SprTrainedDecisionTree.hh          StatPatternRecognition/SprArcE4.hh \
  StatPatternRecognition/SprTrainedFisher.hh                StatPatternRecognition/SprAsciiWriter.hh \
  StatPatternRecognition/SprTrainedMultiClassLearner.hh     StatPatternRecognition/SprAverageLoss.hh \
  StatPatternRecognition/SprTrainedNode.hh                  StatPatternRecognition/SprTrainedRBF.hh \
  StatPatternRecognition/SprBagger.hh                       StatPatternRecognition/SprTrainedStdBackprop.hh \
  StatPatternRecognition/SprTrainedTopdownTree.hh           StatPatternRecognition/SprClassifierReader.hh \
  StatPatternRecognition/SprBinarySplit.hh                  StatPatternRecognition/SprTransformation.hh \
  StatPatternRecognition/SprBootstrap.hh                    StatPatternRecognition/SprTreeNode.hh \
  StatPatternRecognition/SprBoxFilter.hh                    StatPatternRecognition/SprPlotter.hh \
  StatPatternRecognition/SprBumpHunter.hh                   StatPatternRecognition/SprTwoClassBgrndSmoother.hh \
  StatPatternRecognition/SprClass.hh                        StatPatternRecognition/SprTwoClassBKDiscovery.hh \
  StatPatternRecognition/SprCrossValidator.hh               StatPatternRecognition/SprTwoClassCrossEntropy.hh \
  StatPatternRecognition/SprDataFeeder.hh                   StatPatternRecognition/SprTwoClassGiniIndex.hh \
  StatPatternRecognition/SprData.hh                         StatPatternRecognition/SprTwoClassIDFraction.hh \
  StatPatternRecognition/SprDataMoments.hh                  StatPatternRecognition/SprTwoClassPunzi.hh \
  StatPatternRecognition/SprDecisionTree.hh                 StatPatternRecognition/SprTwoClassPurity.hh \
  StatPatternRecognition/SprDefs.hh                         StatPatternRecognition/SprTwoClassSignalSignif.hh \
  StatPatternRecognition/SprEmptyFilter.hh                  StatPatternRecognition/SprTwoClassTaggerEff.hh \
  StatPatternRecognition/SprExperiment.hh                   StatPatternRecognition/SprTwoClassUniformPriorUL90.hh \
  StatPatternRecognition/SprFisher.hh                       StatPatternRecognition/SprUtils.hh \
  StatPatternRecognition/SprLogitR.hh                       StatPatternRecognition/SprTrainedLogitR.hh \
  StatPatternRecognition/SprRWFactory.hh                    StatPatternRecognition/SprStdBackprop.hh \
  StatPatternRecognition/SprPreFilter.hh                    StatPatternRecognition/SprCoordinateMapper.hh \
  StatPatternRecognition/SprMultiClassPlotter.hh            StatPatternRecognition/SprClassifierEvaluator.hh \
  StatPatternRecognition/SprAbsVarTransformer.hh            StatPatternRecognition/SprPCATransformer.hh \
  StatPatternRecognition/SprTransformerFilter.hh            StatPatternRecognition/SprVarTransformerReader.hh \
  StatPatternRecognition/SprVarSelectorFilter.hh            StatPatternRecognition/SprVarTransformerSequence.hh \
  StatPatternRecognition/SprInputNormalizer.hh              StatPatternRecognition/SprRangeBooster.hh \
  StatPatternRecognition/SprTrainedRangeBooster.hh          StatPatternRecognition/SprGEP.hh \
  StatPatternRecognition/SprTrainedGEP.hh                   StatPatternRecognition/SprChromosome.hh \
  StatPatternRecognition/SprTwoClassFitness.hh              StatPatternRecognition/SprTrainedBinaryEncoder.hh \
  StatPatternRecognition/SprBinaryEncoder.hh                StatPatternRecognition/SprReplaceMissing.hh \
  StatPatternRecognition/SprIndicatorMatrix.hh              StatPatternRecognition/SprConfig.hh

if WITH_ROOT
    TMP_ROOT_FILES = StatPatternRecognition/SprAdapterDict.h StatPatternRecognition/SprRootAdapter.hh
endif

pkginclude_HEADERS += $(TMP_ROOT_FILES)
