pkginclude_HEADERS = \
	StatPatternRecognition/SprAbsClassifier.hh \
	StatPatternRecognition/SprAbsFilter.hh \
	StatPatternRecognition/SprAbsMultiClassLearner.hh \
	StatPatternRecognition/SprAbsReader.hh \
	StatPatternRecognition/SprAbsTrainedClassifier.hh \
	StatPatternRecognition/SprAbsTrainedMultiClassLearner.hh \
	StatPatternRecognition/SprAbsTwoClassCriterion.hh \
	StatPatternRecognition/SprAbsVarTransformer.hh \
	StatPatternRecognition/SprAbsWriter.hh \
	StatPatternRecognition/SprAdaBoost.hh \
	StatPatternRecognition/SprArcE4.hh \
	StatPatternRecognition/SprAsciiWriter.hh \
	StatPatternRecognition/SprAverageLoss.hh \
	StatPatternRecognition/SprBagger.hh \
	StatPatternRecognition/SprBinaryEncoder.hh \
	StatPatternRecognition/SprBinarySplit.hh \
	StatPatternRecognition/SprBootstrap.hh \
	StatPatternRecognition/SprBoxFilter.hh \
	StatPatternRecognition/SprBumpHunter.hh \
	StatPatternRecognition/SprChiCdf.hh \
	StatPatternRecognition/SprChromosome.hh \
	StatPatternRecognition/SprClass.hh \
	StatPatternRecognition/SprClassifierEvaluator.hh \
	StatPatternRecognition/SprClassifierReader.hh \
	StatPatternRecognition/SprCombiner.hh \
	StatPatternRecognition/SprConfig.hh \
	StatPatternRecognition/SprCoordinateMapper.hh \
	StatPatternRecognition/SprCrossValidator.hh \
	StatPatternRecognition/SprData.hh \
	StatPatternRecognition/SprDataFeeder.hh \
	StatPatternRecognition/SprDataMoments.hh \
	StatPatternRecognition/SprDecisionTree.hh \
	StatPatternRecognition/SprDefs.hh \
	StatPatternRecognition/SprEmptyFilter.hh \
	StatPatternRecognition/SprExperiment.hh \
	StatPatternRecognition/SprFisher.hh \
	StatPatternRecognition/SprFomCalculator.hh \
	StatPatternRecognition/SprGEP.hh \
	StatPatternRecognition/SprGenMatrix.hh \
	StatPatternRecognition/SprIndicatorMatrix.hh \
	StatPatternRecognition/SprInputNormalizer.hh \
	StatPatternRecognition/SprIntegerBootstrap.hh \
	StatPatternRecognition/SprIntegerPermutator.hh \
	StatPatternRecognition/SprLogitR.hh \
	StatPatternRecognition/SprLoss.hh \
	StatPatternRecognition/SprMatrix.hh \
	StatPatternRecognition/SprMultiClassLearner.hh \
	StatPatternRecognition/SprMultiClassPlotter.hh \
	StatPatternRecognition/SprMultiClassReader.hh \
	StatPatternRecognition/SprNNDefs.hh \
	StatPatternRecognition/SprPCATransformer.hh \
	StatPatternRecognition/SprPlotter.hh \
	StatPatternRecognition/SprPoint.hh \
	StatPatternRecognition/SprPreFilter.hh \
	StatPatternRecognition/SprRWFactory.hh \
	StatPatternRecognition/SprRandomNumber.hh \
	StatPatternRecognition/SprRangeBooster.hh \
	StatPatternRecognition/SprRanluxEngine.hh \
	StatPatternRecognition/SprReplaceMissing.hh \
	StatPatternRecognition/SprRootAdapter.hh \
	StatPatternRecognition/SprRootReader.hh \
	StatPatternRecognition/SprRootWriter.hh \
	StatPatternRecognition/SprSeedTable.hh \
	StatPatternRecognition/SprSimpleReader.hh \
	StatPatternRecognition/SprStdBackprop.hh \
	StatPatternRecognition/SprStringParser.hh \
	StatPatternRecognition/SprSymMatrix.hh \
	StatPatternRecognition/SprTopdownTree.hh \
	StatPatternRecognition/SprTrainedAdaBoost.hh \
	StatPatternRecognition/SprTrainedBagger.hh \
	StatPatternRecognition/SprTrainedBinaryEncoder.hh \
	StatPatternRecognition/SprTrainedBinarySplit.hh \
	StatPatternRecognition/SprTrainedCombiner.hh \
	StatPatternRecognition/SprTrainedDecisionTree.hh \
	StatPatternRecognition/SprTrainedFisher.hh \
	StatPatternRecognition/SprTrainedGEP.hh \
	StatPatternRecognition/SprTrainedLogitR.hh \
	StatPatternRecognition/SprTrainedMultiClassLearner.hh \
	StatPatternRecognition/SprTrainedNode.hh \
	StatPatternRecognition/SprTrainedRBF.hh \
	StatPatternRecognition/SprTrainedRangeBooster.hh \
	StatPatternRecognition/SprTrainedStdBackprop.hh \
	StatPatternRecognition/SprTrainedTopdownTree.hh \
	StatPatternRecognition/SprTransformation.hh \
	StatPatternRecognition/SprTransformerFilter.hh \
	StatPatternRecognition/SprTreeNode.hh \
	StatPatternRecognition/SprTwoClassBKDiscovery.hh \
	StatPatternRecognition/SprTwoClassBgrndSmoother.hh \
	StatPatternRecognition/SprTwoClassCrossEntropy.hh \
	StatPatternRecognition/SprTwoClassFitness.hh \
	StatPatternRecognition/SprTwoClassGiniIndex.hh \
	StatPatternRecognition/SprTwoClassIDFraction.hh \
	StatPatternRecognition/SprTwoClassPunzi.hh \
	StatPatternRecognition/SprTwoClassPurity.hh \
	StatPatternRecognition/SprTwoClassSignalSignif.hh \
	StatPatternRecognition/SprTwoClassTaggerEff.hh \
	StatPatternRecognition/SprTwoClassUniformPriorUL90.hh \
	StatPatternRecognition/SprUtils.hh \
	StatPatternRecognition/SprVarSelectorFilter.hh \
	StatPatternRecognition/SprVarTransformerReader.hh \
	StatPatternRecognition/SprVarTransformerSequence.hh \
	StatPatternRecognition/SprVector.hh

if WITH_ROOT
    TMP_ROOT_FILES = StatPatternRecognition/SprAdapterDict.h StatPatternRecognition/SprRootAdapter.hh
endif

pkginclude_HEADERS += $(TMP_ROOT_FILES)
