noinst_LTLIBRARIES = libSPRmath.la

libSPRmath_la_SOURCES  = \
  SprChiCdf.cc   	SprGenMatrix.cc \
  SprMatrix.cc   	SprRanluxEngine.cc \
  SprSymMatrix.cc	SprSymMatrixInvert.cc \
  SprVector.cc

include_HEADERS = \
  SprChiCdf.hh		SprGenMatrix.hh \
  SprMatrix.hh		SprRanluxEngine.hh \
  SprSeedTable.hh	SprSymMatrix.hh \
  SprVector.hh
