include_HEADERS = \
  SprFomCalculator.hh                SprIntegerBootstrap.hh \
  SprAbsClassifier.hh                SprIntegerPermutator.hh \
  SprCombiner.hh                     SprLoss.hh \
  SprAbsFilter.hh                    SprMultiClassReader.hh \
  SprAbsMultiClassLearner.hh         SprMultiClassLearner.hh \
  SprAbsReader.hh                    SprPoint.hh \
  SprNNDefs.hh                       SprRandomNumber.hh \
  SprAbsTrainedClassifier.hh         SprRootReader.hh \
  SprTrainedCombiner.hh              SprRootWriter.hh \
  SprAbsTrainedMultiClassLearner.hh  SprSimpleReader.hh \
  SprAbsTwoClassCriterion.hh         SprStringParser.hh \
  SprAbsWriter.hh                    SprTopdownTree.hh \
  SprTrainedAdaBoost.hh              SprTrainedBagger.hh \
  SprAdaBoost.hh                     SprTrainedBinarySplit.hh \
  SprTrainedDecisionTree.hh          SprArcE4.hh \
  SprTrainedFisher.hh                SprAsciiWriter.hh \
  SprTrainedMultiClassLearner.hh     SprAverageLoss.hh \
  SprTrainedNode.hh                  SprTrainedRBF.hh \
  SprBagger.hh                       SprTrainedStdBackprop.hh \
  SprTrainedTopdownTree.hh           SprClassifierReader.hh \
  SprBinarySplit.hh                  SprTransformation.hh \
  SprBootstrap.hh                    SprTreeNode.hh \
  SprBoxFilter.hh                    SprPlotter.hh \
  SprBumpHunter.hh                   SprTwoClassBgrndSmoother.hh \
  SprClass.hh                        SprTwoClassBKDiscovery.hh \
  SprCrossValidator.hh               SprTwoClassCrossEntropy.hh \
  SprDataFeeder.hh                   SprTwoClassGiniIndex.hh \
  SprData.hh                         SprTwoClassIDFraction.hh \
  SprDataMoments.hh                  SprTwoClassPunzi.hh \
  SprDecisionTree.hh                 SprTwoClassPurity.hh \
  SprDefs.hh                         SprTwoClassSignalSignif.hh \
  SprEmptyFilter.hh                  SprTwoClassTaggerEff.hh \
  SprExperiment.hh                   SprTwoClassUniformPriorUL90.hh \
  SprFisher.hh                       SprUtils.hh \
  SprLogitR.hh                       SprTrainedLogitR.hh \
  SprRWFactory.hh                    SprStdBackprop.hh \
  SprPreFilter.hh                    SprCoordinateMapper.hh \
  SprMultiClassPlotter.hh            SprClassifierEvaluator.hh \
  SprAbsVarTransformer.hh            SprPCATransformer.hh \
  SprTransformerFilter.hh            SprVarTransformerReader.hh \
  SprVarSelectorFilter.hh            SprVarTransformerSequence.hh \
  SprInputNormalizer.hh              SprRangeBooster.hh \
  SprTrainedRangeBooster.hh          SprGEP.hh \
  SprTrainedGEP.hh                   SprChromosome.hh \
  SprTwoClassFitness.hh              SprTrainedBinaryEncoder.hh \
  SprBinaryEncoder.hh                SprReplaceMissing.hh \
  SprIndicatorMatrix.hh              SprConfig.hh

if WITH_ROOT
    TMP_ROOT_FILES = SprAdapterDict.h SprRootAdapter.hh
endif

include_HEADERS += $(TMP_ROOT_FILES)
